# jobclient

./: .gitignore  CMakeLists.txt  config.cpp  config.h  main.cpp  processpoll.h  readme.md
bak/: DatasetMgr.cpp  DatasetMgr.h  PluginMgr.cpp  PluginMgr.h  custom.cpp  json.hpp
dataset/: dataset_mgr.cpp  dataset_mgr.h
deviceManager/: device_manager.cpp  device_manager.h
dispatchProcess/: dispatchProcess.cpp  dispatchProcess.h  taskManager.cpp
engine/: CMakeLists.txt  engine.cpp  engine.h
engine/mnn/: MnnEngine.cpp  MnnEngine.h
engine/mxnet/: MxnetEngin.cpp  MxnetEngin.h
grpc/: device_manager.cpp  device_manager.h  job_manager.cpp  job_manager.h
hander/: handerManager.cpp  handerManager.h
include/: json.hpp  prePost.h  tensor.h
include_/: define.h
masterProcess/: masterProcess.cpp  masterProcess.h
plugin/: pluginManager.cpp
process/: masterProcess.cpp  masterProcess.h  taskProcess.cpp  workProcess.cpp
proto/: jobmanager.proto  taskmanagerback.proto
queue/: jobQueue.h
reportProcess/: reportProcess.cpp  reportProcess.h
task/: taskManager.h
taskProcess/: taskManager.cpp
test/: attr.cpp
workProcess/: daemonProcess.cpp  daemonProcess.h  dataset_mgr.cpp  dataset_mgr.h  jobTask.cpp  jobTask.h  pluginManager.cpp  pluginManager.h  taskQueue.cpp  taskQueue.h  workProcess.cpp  workProcess.h
